--- a/HA/docker-compose.yml
+++ b/HA/docker-compose.yml
@@ -1,14 +1,12 @@
-version: '3'
+version: '2'
 services:
   homeassistant:
     container_name: home-assistant
-    image: homeassistant/home-assistant
+    image: homeassistant/raspberrypi3-homeassistant
     volumes:
-      - /path/to/your/config:/config
+      - ./config:/config
       - /etc/localtime:/etc/localtime:ro
     devices:
-      - /dev/ttyUSB0:/dev/ttyUSB0
-      - /dev/ttyUSB1:/dev/ttyUSB1
       - /dev/ttyACM0:/dev/ttyACM0
     restart: always
     network_mode: host
