--- a/HA/config/configuration.yaml
+++ b/HA/config/configuration.yaml
@@ -70,3 +70,8 @@ script: !include scripts.yaml
 
 zwave:
   usb_path: /dev/ttyACM0
+
+device_tracker:
+  - platform: nmap_tracker
+    hosts: 192.168.1.21/24
+
