--- a/HA/docker-compose.yml
+++ b/HA/docker-compose.yml
@@ -25,6 +25,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer-data:/data
 
+  mosquitto:
+    container_name: mosquitto
+    build: mosquitto/build
+    ports:
+      - 1883:1883
+      - 9001:9001
+    volumes:
+      - ./mosquitto/log/:/mqtt/log/
+      - ./mosquitto/data/:/mqtt/data/
+    networks:
+      - local
 
 networks:
   local:
