--- a/HA/homeassistant/config/configuration.yaml
+++ b/HA/homeassistant/config/configuration.yaml
@@ -24,11 +24,11 @@ zwave:
 
 device_tracker:
   - platform: nmap_tracker
-    home_interval: 20
+    home_interval: 10
     hosts: 192.168.1.20-40
 
 mqtt:
-  broker: mosquitto
+  broker: 192.168.1.12
   port: 1883
   client_id: home-assistant-1
 
