--- a/HA/homeassistant/config/known_devices.yaml
+++ b/HA/homeassistant/config/known_devices.yaml
@@ -1,88 +1,33 @@
 
-modemhome:
-  hide_if_away: false
-  icon:
-  mac: 18:62:2C:B8:64:5C
-  name: modem.home
-  picture:
-  track: false
-
-0005cd38ace8:
-  hide_if_away: false
-  icon:
-  mac: 00:05:CD:38:AC:E8
-  name: 0005CD38ACE8
-  picture:
-  track: false
-
-desktopd2qkjre:
-  hide_if_away: false
-  icon:
-  mac: 10:C3:7B:92:1A:56
-  name: DESKTOP-D2QKJRE
-  picture:
-  track: false
-
-0011321502e8:
-  hide_if_away: false
-  icon:
-  mac: 00:11:32:15:02:E8
-  name: 0011321502e8
-  picture:
-  track: false
-
-gearfit22b08:
-  hide_if_away: false
-  icon:
-  mac: 84:98:66:F0:2B:09
-  name: GearFit2-2B08
-  picture:
-  track: false
-
-androidf01e56250057d92d:
-  name: Phone_Kasia
-  hide_if_away: false
-  icon:
-  mac: 84:38:38:D2:B9:0B
-  picture: /local/kasia_icon.png
-  track: true
-
-androida79e1a42e836f775:
-  name: Phone_Krzysztof
-  hide_if_away: false
-  icon:
-  mac: C0:BD:D1:98:67:3B
-  picture: /local/krzysztof_icon.png
-  track: true
-
-krzysztofowntracks_krzysztof:
-  hide_if_away: false
-  icon:
-  mac:
-  name: Krzysztof-owntracks
-  picture:
-  track: false
-
-temp_temp:
-  hide_if_away: false
-  icon:
-  mac:
-  name: temp
-  picture:
-  track: false
-
-admin_krzysztof:
-  hide_if_away: false
-  icon:
-  mac:
-  name: admin
-  picture:
-  track: false
-
 krzysztofowntracks_note4:
   hide_if_away: false
   icon:
   mac:
   name: Krzysztof-owntracks
+  picture:
+  track: true
+
+androida79e1a42e836f775:
+  hide_if_away: false
+  icon:
+  mac: C0:BD:D1:98:67:3B
+  name: Krzysztof-nmap
+  picture:
+  track: true
+
+androidf01e56250057d92d:
+  hide_if_away: false
+  icon:
+  mac: 84:38:38:D2:B9:0B
+  name: Kasia-nmap
+  picture:
+  track: true
+
+
+krzysztof_krzysztof_note_4:
+  hide_if_away: false
+  icon:
+  mac:
+  name: Krzysztof
   picture:
   track: true
